<resources>
    <string name="app_name">Prog_Lista_Cartas</string>
    <string name="TITULO">POKEMETA CARDS</string>
    <string name="AGUA">AGUA</string>
    <string name="FUEGO">FUEGO</string>
    <string name="ELECTRICO">ELECTRICO</string>
    <string name="SINIESTRO">SINIESTRO</string>
    <string name="HADA">HADA</string>
    <string name="PSIQUICO">PSIQUICO</string>
    <string name="LUCHA">LUCHA</string>
    <string name="NORMAL">NORMAL</string>
    <string name="TIERRA">TIERRA</string>
    <string name="ACERO">ACERO</string>
    <string name="PLANTA">PLANTA</string>
    <string name="MOSTRAR">mostrar\n</string>
    <string name="mostrar">mostrar</string>
    <string name="Tab1">Videos</string>
    <string name="Tab2">Novedades</string>
    <string name="Tab3">Rares</string>
    <string name="item1">Añadir Carta</string>
</resources>