<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="63dp"
        android:text="@string/TITULO"
        android:textColor="#B4190D"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/AGUA"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/ELECTRICO"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:text="@string/LUCHA"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/PSIQUICO"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:text="@string/TIERRA"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/ACERO"
        app:layout_constraintBottom_toTopOf="@+id/imageButton6"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/FUEGO"
        app:layout_constraintBottom_toTopOf="@+id/imageButton8"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:text="@string/NORMAL"
        app:layout_constraintBottom_toTopOf="@+id/imageButton10"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/SINIESTRO"
        app:layout_constraintBottom_toTopOf="@+id/imageButton9"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="46dp"
        android:text="@string/PLANTA"
        app:layout_constraintBottom_toTopOf="@+id/imageButton7"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>